--- a/TabloidMVC/Views/UserProfile/Details.cshtml
+++ b/TabloidMVC/Views/UserProfile/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TabloidMVC.Models.UserProfile
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Details/${model.id}";
 }
 
 <h1>Details</h1>
@@ -16,17 +16,11 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Id)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FullName)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LastName)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.FullName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DisplayName)
@@ -48,9 +42,10 @@
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ImageLocation)
+
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageLocation)
+            <img class="bg-info rounded-circle img-fluid" src="@Model.ImageLocation" alt="avatar" />
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.UserTypeId)
@@ -58,12 +53,7 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.UserTypeId)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FullName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FullName)
-        </dd>
+     
     </dl>
 </div>
 <div>
